--- a/Resources/translations/forms.en.xlf
+++ b/Resources/translations/forms.en.xlf
@@ -56,13 +56,23 @@
                 <target>{{ count }} images selected.</target>
             </trans-unit>
 
-            <trans-unit id="60d060204beda17eae9e7d7167c61903" resname="uploadedFile.singleUploadText">
-                <source>uploadedFile.singleUploadText</source>
+            <trans-unit id="6789c0a998095d335f5e15f7c6e817b0" resname="uploadedFile.singleShortUploadText">
+                <source>uploadedFile.singleShortUploadText</source>
+                <target>Choose file</target>
+            </trans-unit>
+
+            <trans-unit id="a65653dd9c09906c89040d82e6a03267" resname="uploadedFile.multipleShortUploadText">
+                <source>uploadedFile.multipleShortUploadText</source>
+                <target>Choose files</target>
+            </trans-unit>
+
+            <trans-unit id="cb364c15c6676927218a469c704d5b1e" resname="uploadedFile.singleLongUploadText">
+                <source>uploadedFile.singleLongUploadText</source>
                 <target>Choose file by clicking or dropping here.</target>
             </trans-unit>
 
-            <trans-unit id="6d3149c09c2300c5369e2f0bbe449326" resname="uploadedFile.multipleUploadText">
-                <source>uploadedFile.multipleUploadText</source>
+            <trans-unit id="2b242901c854bfe89374c2e203d23c05" resname="uploadedFile.multipleLongUploadText">
+                <source>uploadedFile.multipleLongUploadText</source>
                 <target>Choose files by clicking or dropping here.</target>
             </trans-unit>
 
@@ -71,13 +81,23 @@
                 <target>Invalid file type.</target>
             </trans-unit>
 
-            <trans-unit id="06b933a85601fa87bb5a0efa7c0cc78d" resname="uploadedImage.singleUploadText">
-                <source>uploadedImage.singleUploadText</source>
+            <trans-unit id="8cf1a70ee7a3c4b5617af508953f354e" resname="uploadedImage.singleShortUploadText">
+                <source>uploadedImage.singleShortUploadText</source>
+                <target>Choose image</target>
+            </trans-unit>
+
+            <trans-unit id="cea61b3161cf7ae3ae01888fcde0cda6" resname="uploadedImage.multipleShortUploadText">
+                <source>uploadedImage.multipleShortUploadText</source>
+                <target>Choose images</target>
+            </trans-unit>
+
+            <trans-unit id="11088620ae9e7dc9fccb7f9c7280b210" resname="uploadedImage.singleLongUploadText">
+                <source>uploadedImage.singleLongUploadText</source>
                 <target>Choose image by clicking or dropping here.</target>
             </trans-unit>
 
-            <trans-unit id="b84c6d74ed252e2a98ffe3f07fa979d0" resname="uploadedImage.multipleUploadText">
-                <source>uploadedImage.multipleUploadText</source>
+            <trans-unit id="1160a23d47c16e8269614bf3db8891f2" resname="uploadedImage.multipleLongUploadText">
+                <source>uploadedImage.multipleLongUploadText</source>
                 <target>Choose images by clicking or dropping here.</target>
             </trans-unit>
 
