--- a/Resources/translations/messages.en.xlf
+++ b/Resources/translations/messages.en.xlf
@@ -25,6 +25,11 @@
                 <source>Sk</source>
                 <target>Slovak</target>
             </trans-unit>
+
+            <trans-unit id="8e4364411aa4681a205457a2d7f06d1c" resname="Pl">
+                <source>Pl</source>
+                <target>Polish</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
