--- a/Resources/translations/messages.hu.xlf
+++ b/Resources/translations/messages.hu.xlf
@@ -30,6 +30,11 @@
                 <source>Pl</source>
                 <target>Lengyelül</target>
             </trans-unit>
+
+            <trans-unit id="9fabec19f0ee826f7822ccd41dd4f553" resname="Hu">
+                <source>Hu</source>
+                <target>Magyarul</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
